fix: modal layout shift for none overlay scrollbar

--- a/packages/docsearch-css/src/modal.css
+++ b/packages/docsearch-css/src/modal.css
@@ -6,6 +6,13 @@
    * `style` attribute (e.g. Docusaurus).
    */
   overflow: hidden !important;
+
+  overflow-y: scroll !important;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /* Set top from js */
 }
 
 /* Container & Modal */
